--- a/src/components/UserForm/Capabilities/Capabilities.module.css
+++ b/src/components/UserForm/Capabilities/Capabilities.module.css
@@ -16,7 +16,3 @@
   width: 15px;
   height: 15px;
 }
-
-.textArea {
-  font-weight: bold;
-}
