--- a/src/index.css
+++ b/src/index.css
@@ -21,11 +21,6 @@
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
 
-.error {
-  line-height: 1;
-  font-size: 0.8rem;
-  color: #eb5757;
-}
 
 html {
   line-height: 1.15;
